tests/ui/transmutability/references/reject_extension.stderr
error[E0277]: `&Packed<Two>` cannot be safely transmuted into `&Packed<Four>`
  --> $DIR/reject_extension.rs:48:37
   |
LL |     assert::is_transmutable::<&Src, &Dst>();
   |                                     ^^^^ the size of `Packed<Two>` (2 bytes) is smaller than that of `Packed<Four>` (4 bytes)
   |
note: required by a bound in `is_transmutable`
  --> $DIR/reject_extension.rs:13:14
   |
LL |       pub fn is_transmutable<Src, Dst>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<
   |  ______________^
LL | |             Src,
LL | |             {
LL | |                 Assume {
...  |
LL | |             },
LL | |         >,
   | |_________^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
